Crash when reopen Blender after setting the international font #56374

Closed
opened 2018-08-14 10:09:16 +02:00 by ddd · 6 comments

System Information
MacBook Pro (Retina, 15-inch, Mid 2015)
macOS 10.13.2

Blender Version
Broken: version: 2.80 (sub 21), branch: blender2.8, commit date: 2018-08-14 00:53, hash: e040cfe15a
Worked: 2.79b (hash:f4dc9f9)

Short description of error
Crash when reopen Blender after setting the international font to Simplified Chinese.

Exact steps for others to reproduce the error

  1. Go to Edit/User Preferences/System
  2. Check on "International Fonts", select Simplified Chinese and click "New Data" (don't need to click "Interface" or "Tooltips",both work well) and save user settings.
  3. close the blender and reopen it, you will find it crashes on startup.
**System Information** MacBook Pro (Retina, 15-inch, Mid 2015) macOS 10.13.2 **Blender Version** Broken: version: 2.80 (sub 21), branch: blender2.8, commit date: 2018-08-14 00:53, hash: e040cfe15af Worked: 2.79b (hash:f4dc9f9) **Short description of error** Crash when reopen Blender after setting the international font to Simplified Chinese. **Exact steps for others to reproduce the error** 1. Go to Edit/User Preferences/System 2. Check on "International Fonts", select Simplified Chinese and click "New Data" (don't need to click "Interface" or "Tooltips",both work well) and save user settings. 3. close the blender and reopen it, you will find it crashes on startup.
Author

Added subscriber: @dfasdf

Added subscriber: @dfasdf

Added subscribers: @ArtoKitula, @mont29

Added subscribers: @ArtoKitula, @mont29

Cannot confirm that here on linux, @ArtoKitula maybe you can try it on osx?

Cannot confirm that here on linux, @ArtoKitula maybe you can try it on osx?

Confirmed. Short output from debug, so pasting it here rather than adding file =)

Read prefs: /Users/azo/Library/Application Support/Blender/2.80/config/userpref.blend
libc++abi.dylib: terminating with uncaught exception of type std::bad_cast: std::bad_cast
Process 41740 stopped
* thread #1, queue = 'com.apple.main-thread', stop reason = signal SIGABRT
    frame #0: 0x00007fff5159bb66 libsystem_kernel.dylib`__pthread_kill + 10
libsystem_kernel.dylib`__pthread_kill:
->  0x7fff5159bb66 <+10>: jae    0x7fff5159bb70            ; <+20>
    0x7fff5159bb68 <+12>: movq   %rax, %rdi
    0x7fff5159bb6b <+15>: jmp    0x7fff51592ae9            ; cerror_nocancel
    0x7fff5159bb70 <+20>: retq   
Target 0: (blender) stopped.
Confirmed. Short output from debug, so pasting it here rather than adding file =) ``` Read prefs: /Users/azo/Library/Application Support/Blender/2.80/config/userpref.blend libc++abi.dylib: terminating with uncaught exception of type std::bad_cast: std::bad_cast Process 41740 stopped * thread #1, queue = 'com.apple.main-thread', stop reason = signal SIGABRT frame #0: 0x00007fff5159bb66 libsystem_kernel.dylib`__pthread_kill + 10 libsystem_kernel.dylib`__pthread_kill: -> 0x7fff5159bb66 <+10>: jae 0x7fff5159bb70 ; <+20> 0x7fff5159bb68 <+12>: movq %rax, %rdi 0x7fff5159bb6b <+15>: jmp 0x7fff51592ae9 ; cerror_nocancel 0x7fff5159bb70 <+20>: retq Target 0: (blender) stopped. ```

This issue was referenced by fa0fcbe4d6

This issue was referenced by fa0fcbe4d6ca3f183f02395fe9ba18fb5ea87748

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56374
No description provided.