Fix T56374, T57066, T58037: crash on startup on macOS when using translation.